--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="c:\Users\joice\OneDrive\Imagens\emvelope.jfif" alt="Envelope" class="envelope" id="envelope">
+        <img src="emvelope.jfif" alt="Envelope" class="envelope" id="envelope">
         <div class="message" id="message">Você é incrível!</div>
     </div>
 
