--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://github.com/joicerodrigues27/Abraaquii/blob/main/emvelope.jfif" alt="Envelope" class="envelope" id="envelope">
+        <img src="https://github.com/joicerodrigues27/Abraaquii/blob/main/imagem.jpeg" alt="Envelope" class="envelope" id="envelope">
         <div class="message" id="message">Você é incrível!</div>
     </div>
 
