--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="imagem.jpeg" alt="Envelope" class="envelope" id="envelope">
+        <img src="imagem.jpeg" alt="imagem.jpeg" class="envelope" id="imagem.jpeg">
         <div class="message" id="message">Você é incrível!</div>
     </div>
 
